plugins {
    id 'com.android.library'
    id 'org.jetbrains.kotlin.android'
    id 'kotlin-parcelize'
    id 'kotlin-kapt'
}

android {
    namespace 'kz.android.tron.domain'
    compileSdk 36

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
    }
    kapt {
        javacOptions {
            option("-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
        }
    }

}
dependencies {
    // Dagger 2
    kapt 'com.google.dagger:dagger-compiler:2.57'
    implementation 'com.google.dagger:dagger:2.57'

    implementation 'androidx.paging:paging-runtime-ktx:3.3.6'
    // Coroutine
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3-native-mt'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
}